Dark mode correction

--- a/PresentGlama/wwwroot/css/site.css
+++ b/PresentGlama/wwwroot/css/site.css
@@ -29,6 +29,7 @@ textarea.user-input{
     padding: 1rem;
     height: 400px;
     overflow-y: auto;
+    background: #e5e5e5;
 }
 
 .message {
@@ -51,12 +52,16 @@ body.dark {
     background: #111;
     color: #f2faf9;
 }
+.dark a {
+    color: #5d9efd;
+}
 .dark textarea.user-input {
     background: #222;
     color:ghostwhite;
 }
 .dark #chat {
     border: 1px solid #3a3a3a;
+    background: #121210;
 }
 .dark .user {
     color: #dddad9;
@@ -66,4 +71,9 @@ body.dark {
 .dark .assistant {
     background: #323049;
     color: #d1d3d2;
+}
+.dark .btn-info {
+    color: #e0e0e0;
+    background-color: #0d4a70;
+    border-color: #1d5a7a;
 }
